# wayland-sillyness

./: Cargo.toml
client/: Cargo.toml
client/choose_decor_mode/: variants.sh
client/choose_decor_mode/src/: main.rs
client/get_supported_modes/: Cargo.toml
client/get_supported_modes/src/: main.rs
src/: main.rs
