[package]
name = "get-supported-modes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.9.0"
wayland-client = "0.31.0"
wayland-protocols = { version = "0.31.0", features = ["client", "unstable"]}

[patch.crates-io]
wayland-protocols = { path = "../wayland-rs/wayland-protocols" }